samples/_failures_safe/1761553333_bdac04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccdabfae.c: In function ‘main’:
./samples/SAFE/__tmp_ccdabfae.c:149:13: error: expected expression at end of input
  149 |             mat1.cols = read_int("Enter columns for matrix 1 (1-10): ", 1,
      |             ^~~~
./samples/SAFE/__tmp_ccdabfae.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccdabfae.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccdabfae.c:149:13: error: expected declaration or statement at end of input
